--- a/Nodes/UI/Maintenance/Maintenance.yaml
+++ b/Nodes/UI/Maintenance/Maintenance.yaml
@@ -307,7 +307,7 @@ Children:
       Children:
       - Name: Value
         Type: BaseDataVariableType
-        DataType: DateTime
+        DataType: ns=0;DateTime
         Value: "2023-12-03T18:03:00.0000000"
       - Name: LeftMargin
         Type: BaseVariableType
@@ -375,7 +375,7 @@ Children:
       Children:
       - Name: Value
         Type: BaseDataVariableType
-        DataType: DateTime
+        DataType: ns=0;DateTime
         Value: "2023-12-03T18:03:00.0000000"
       - Name: LeftMargin
         Type: BaseVariableType
@@ -1048,7 +1048,7 @@ Children:
         Children:
         - Name: Value
           Type: BaseDataVariableType
-          DataType: DateTime
+          DataType: ns=0;DateTime
           Value: "2023-12-03T00:00:00.0000000"
         - Name: LeftMargin
           Type: BaseVariableType
@@ -1083,7 +1083,7 @@ Children:
         Children:
         - Name: Value
           Type: BaseDataVariableType
-          DataType: DateTime
+          DataType: ns=0;DateTime
           Value: "2023-12-05T00:00:00.0000000"
         - Name: LeftMargin
           Type: BaseVariableType
