--- a/Nodes/UI/templates/templates.yaml
+++ b/Nodes/UI/templates/templates.yaml
@@ -8,7 +8,7 @@ Children:
   Children:
   - Name: Time
     Type: BaseDataVariableType
-    DataType: DateTime
+    DataType: ns=0;DateTime
     Value: "1601-01-01T00:00:00.0000000"
     Children:
     - Name: Year
@@ -37,7 +37,7 @@ Children:
       Value: 0
   - Name: UTCTime
     Type: BaseDataVariableType
-    DataType: DateTime
+    DataType: ns=0;DateTime
     Value: "1601-01-01T00:00:00.0000000"
     Children:
     - Name: Year
