--- a/Nodes/UI/Controller/Controller.yaml
+++ b/Nodes/UI/Controller/Controller.yaml
@@ -2381,12 +2381,12 @@ Children:
         Type: BaseDataVariableType
         DataType: LocalizedText
         ModellingRule: Optional
-        Value: {"LocaleId":"en-US","Text":"连接数利用率"}
+        Value: {"LocaleId":"en-US","Text":"通讯利用率"}
       - Name: LeftMargin
         Type: BaseVariableType
         DataType: Size
         ModellingRule: Optional
-        Value: 190.0
+        Value: 202.0
       - Name: TopMargin
         Type: BaseVariableType
         DataType: Size
